chore: returning images on response
