# api.pb.go
@@ -28,7 +28,7 @@ const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
 
 type SnapshotRequest struct {
 	Url                  string   `protobuf:"bytes,1,opt,name=url,proto3" json:"url,omitempty"`
-	WaitTime             int32    `protobuf:"varint,2,opt,name=wait_time,json=waitTime,proto3" json:"wait_time,omitempty"`
+	WaitPeriod           int32    `protobuf:"varint,2,opt,name=wait_period,json=waitPeriod,proto3" json:"wait_period,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -66,9 +66,9 @@ func (m *SnapshotRequest) GetUrl() string {
 	return ""
 }
 
-func (m *SnapshotRequest) GetWaitTime() int32 {
+func (m *SnapshotRequest) GetWaitPeriod() int32 {
 	if m != nil {
-		return m.WaitTime
+		return m.WaitPeriod
 	}
 	return 0
 }
@@ -120,23 +120,22 @@ func init() {
 func init() { proto.RegisterFile("api.proto", fileDescriptor_00212fb1f9d3bf1c) }
 
 var fileDescriptor_00212fb1f9d3bf1c = []byte{
-	// 242 bytes of a gzipped FileDescriptorProto
+	// 237 bytes of a gzipped FileDescriptorProto
 	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0xe2, 0x4c, 0x2c, 0xc8, 0xd4,
 	0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17, 0x62, 0x2f, 0xce, 0x4b, 0x2c, 0x28, 0x2d, 0xca, 0x91, 0x92,
 	0x49, 0xcf, 0xcf, 0x4f, 0xcf, 0x49, 0xd5, 0x4f, 0x2c, 0xc8, 0xd4, 0x4f, 0xcc, 0xcb, 0xcb, 0x2f,
 	0x49, 0x2c, 0xc9, 0xcc, 0xcf, 0x2b, 0x86, 0x28, 0x93, 0x92, 0x44, 0x92, 0xcd, 0x28, 0x29, 0x29,
-	0x48, 0xca, 0x4f, 0xa9, 0x84, 0x48, 0x29, 0x39, 0x70, 0xf1, 0x07, 0xe7, 0x25, 0x16, 0x14, 0x67,
+	0x48, 0xca, 0x4f, 0xa9, 0x84, 0x48, 0x29, 0xb9, 0x70, 0xf1, 0x07, 0xe7, 0x25, 0x16, 0x14, 0x67,
 	0xe4, 0x97, 0x04, 0xa5, 0x16, 0x96, 0xa6, 0x16, 0x97, 0x08, 0x09, 0x70, 0x31, 0x97, 0x16, 0xe5,
-	0x48, 0x30, 0x2a, 0x30, 0x6a, 0x70, 0x06, 0x81, 0x98, 0x42, 0xd2, 0x5c, 0x9c, 0xe5, 0x89, 0x99,
-	0x25, 0xf1, 0x25, 0x99, 0xb9, 0xa9, 0x12, 0x4c, 0x0a, 0x8c, 0x1a, 0xac, 0x41, 0x1c, 0x20, 0x81,
-	0x90, 0xcc, 0xdc, 0x54, 0x25, 0x53, 0x2e, 0x01, 0x84, 0x09, 0xc5, 0x05, 0xf9, 0x79, 0xc5, 0xa9,
-	0x42, 0x8a, 0x5c, 0x3c, 0xc5, 0x50, 0xb1, 0x78, 0x84, 0x59, 0xdc, 0x30, 0xb1, 0xd0, 0xa2, 0x1c,
-	0xa3, 0x44, 0x2e, 0xf6, 0xd0, 0x20, 0x1f, 0x90, 0x4e, 0xa1, 0x30, 0x2e, 0x0e, 0x98, 0x09, 0x42,
-	0x12, 0x7a, 0x50, 0x2f, 0xe9, 0xa1, 0x39, 0x4b, 0x4a, 0x44, 0x0f, 0xe2, 0x0b, 0x3d, 0x90, 0xf7,
-	0x3d, 0x4a, 0x4a, 0x0a, 0x9c, 0xf2, 0x53, 0x2a, 0x95, 0xa4, 0x9a, 0x2e, 0x3f, 0x99, 0xcc, 0x24,
-	0x22, 0x24, 0xa4, 0x5f, 0x66, 0xa8, 0x0f, 0x33, 0x5f, 0xbf, 0xba, 0xb4, 0x28, 0xa7, 0x36, 0x89,
-	0x0d, 0xec, 0x45, 0x63, 0x40, 0x00, 0x00, 0x00, 0xff, 0xff, 0xc3, 0xd9, 0xac, 0x79, 0x31, 0x01,
-	0x00, 0x00,
+	0x48, 0x30, 0x2a, 0x30, 0x6a, 0x70, 0x06, 0x81, 0x98, 0x42, 0xf2, 0x5c, 0xdc, 0xe5, 0x89, 0x99,
+	0x25, 0xf1, 0x05, 0xa9, 0x45, 0x99, 0xf9, 0x29, 0x12, 0x4c, 0x0a, 0x8c, 0x1a, 0xac, 0x41, 0x5c,
+	0x20, 0xa1, 0x00, 0xb0, 0x88, 0x92, 0x29, 0x97, 0x00, 0xc2, 0x94, 0xe2, 0x82, 0xfc, 0xbc, 0xe2,
+	0x54, 0x21, 0x45, 0x2e, 0x9e, 0x62, 0xa8, 0x58, 0x3c, 0xc2, 0x3c, 0x6e, 0x98, 0x58, 0x68, 0x51,
+	0x8e, 0x51, 0x34, 0x17, 0x7b, 0x68, 0x90, 0x0f, 0x48, 0xa7, 0x50, 0x00, 0x17, 0x07, 0xcc, 0x04,
+	0x21, 0x09, 0x3d, 0xa8, 0xb7, 0xf4, 0xd0, 0x9c, 0x26, 0x25, 0xa2, 0x07, 0xf1, 0x89, 0x1e, 0x28,
+	0x08, 0x3c, 0x4a, 0x4a, 0x0a, 0x9c, 0xf2, 0x53, 0x2a, 0x95, 0x44, 0x9a, 0x2e, 0x3f, 0x99, 0xcc,
+	0xc4, 0x27, 0xc4, 0xa3, 0x5f, 0x66, 0xa8, 0x0f, 0x33, 0x3f, 0x89, 0x0d, 0xec, 0x41, 0x63, 0x40,
+	0x00, 0x00, 0x00, 0xff, 0xff, 0x79, 0x99, 0x50, 0x3d, 0x2f, 0x01, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
